# Chess-AI-model

./: .gitignore  404.html  Makefile  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
behavioral/: index.html
browser/: index.html
deployment/: index.html
docs/: behavioral.md  browser.md  deployment.md  encoding.md  frontend.md  index.md  maia.md  references.md  setup.md
encoding/: index.html
frontend/: index.html
maia/: index.html
references/: index.html
scripts/: set_model.py
search/: search_index.json
setup/: index.html
src/behavioral/: train.py
src/core/model/: chess_net.py  dataset.py  maia_arch.py  maia_weights.py
src/deployment/: export.py  maia_to_onnx.py  quantize.py
src/evaluation/: compare_checkpoints.py  compare_maia.py  evaluate.py
src/maia/: download_weights.py  finetune_pytorch.py  prepare_data_custom.py
static/: .vercelignore  index.html  model_config.json  model_config_behavior.json  website_guideline.md
static/css/: custom.css
static/js/: ai.js  board.js  config.js  game.js  ui.js
stylesheets/: extra.css
