[project]
name = "chess-ai"
version = "0.1.0"
description = "Behavioral cloning chess AI with Maia fine-tuning"
requires-python = ">=3.13, <=3.14"
dependencies = [
    "torch>=2.1.0",
    "torchvision",
    "numpy",
    "python-chess>=1.10.0",
    "h5py",
    "requests",
    "tqdm",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "mlflow",
    "pyyaml",
    "pandas",
    "stockfish",
    "tensorflow>=2.15.0",
    "humanize>=4.15.0",
    "chess>=1.11.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "protobuf>=6.33.6",
    "onnxscript>=0.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.uv]
managed = true

[tool.pyright]
extraPaths = ["."]
